<resources>

    <string name="app_name">waribiki</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="empty"/>
    <string name="initNum">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="buttonReset">Reset</string>
    <string name="buttonCalc">Calc</string>
    <string name="buttonTax">Tax(105%)</string>
    <string name="rateUnit">%=</string>
    <string name="multiply">x</string>
    
</resources>