<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="0dip"
		android:layout_weight="1" >
		
		<EditText
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:id="@+id/beforePrice"
			android:inputType="number"
			android:layout_weight="1"
			android:text="@string/initNum"
			android:gravity="right" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/multiply" />
		
		<EditText
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:id="@+id/rate"
			android:inputType="number"
			android:focusable="false"
			android:text="@string/empty"
			android:gravity="right" />
		
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/rateUnit" />
		
		<EditText
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:id="@+id/afterPrice"
			android:inputType="none"
			android:focusable="false"
			android:text="@string/initNum"
			android:gravity="right" />
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dip" 
		android:orientation="horizontal"
		android:layout_weight="1" >

		<Button
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/button1"
			android:id="@+id/button1" />
		
		<Button
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/button2"
			android:id="@+id/button2" />
		
		<Button
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/button3"
			android:id="@+id/button3" />

	</LinearLayout>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dip"
		android:orientation="horizontal"
		android:layout_weight="1" >
		
		<Button
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/button4"
			android:id="@+id/button4" />
		
		<Button
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:id="@+id/button5"
			android:text="@string/button5" />
	
		<Button
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:id="@+id/button6"
			android:text="@string/button6" />
				
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dip"
		android:orientation="horizontal"
		android:layout_weight="1" >
		
		<Button
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/button7"
			android:id="@+id/button7" />
		
		<Button
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:id="@+id/button8"
			android:text="@string/button8" />
	
		<Button
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:id="@+id/button9"
			android:text="@string/button9" />
				
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dip"
		android:orientation="horizontal"
		android:layout_weight="1" >
		
		<Button
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/button0"
			android:id="@+id/button0" />
		
		<Button
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:id="@+id/buttonTax"
			android:text="@string/buttonTax" />
		
		<Button
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:id="@+id/buttonReset"
			android:text="@string/buttonReset" />

		<Button
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:id="@+id/buttonCalc"
			android:text="@string/buttonCalc" />
		
	</LinearLayout>
	
	
		
	<SeekBar 
	    android:id="@+id/seekBar"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:max="20"
	    android:progress="16" />

</LinearLayout>